syntax = "proto3";
package user;
option go_package="/userpb";

message AddRequest {
    string user_id = 1;
    int32 age = 2;
}

message AddResponse {
    int32 status_code = 1;
}

service User {
    rpc Add(AddRequest) returns (AddResponse) {};
}